# NyxFile

./: .gitignore  CMakeLists.txt  README.md
cmake/: KPackage.cmake
kgfile/: CMakeLists.txt  KgFile.cpp  KgFile.h
kgmaker/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  main.cpp
kgwriter/: CMakeLists.txt  KgWriter.cpp  KgWriter.h
shader/: .UWUShader.h.kate-swp  CMakeLists.txt  KgFile.cpp  KgFile.h
src/: CMakeLists.txt
src/glslang/: CMakeLists.txt
src/nyxfile/: CMakeLists.txt  NyxFile.cpp  NyxFile.h
src/nyxmaker/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  HeaderMaker.cpp  HeaderMaker.h  main.cpp
src/nyxwriter/: CMakeLists.txt  NyxWriter.cpp  NyxWriter.h
