CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )

SET( CMAKE_CXX_STANDARD          17  )
SET( CMAKE_CXX_STANDARD_REQUIRED ON  )
SET( CMAKE_CXX_EXTENSIONS        OFF )

ADD_SUBDIRECTORY( glslang  ) 
ADD_SUBDIRECTORY( kgwriter ) 
ADD_SUBDIRECTORY( kgfile   )
ADD_SUBDIRECTORY( kgmaker  ) 