SET( NYX_FILE_SOURCES 
     NyxFile.cpp
   )
     
SET( NYX_FILE_HEADERS
     NyxFile.h
   )

SET( NYX_FILE_INCLUDE_DIRS
   )

SET( NYX_FILE_LIBRARIES
     stdc++fs
    )

ADD_LIBRARY               ( nyxfile SHARED   ${NYX_FILE_SOURCES} ${NYX_FILE_HEADERS} )
TARGET_INCLUDE_DIRECTORIES( nyxfile PRIVATE  ${NYX_FILE_INCLUDE_DIRS}                )
TARGET_LINK_LIBRARIES     ( nyxfile PUBLIC   ${NYX_FILE_LIBRARIES}                   )

INSTALL( TARGETS nyxfile EXPORT NyxFile 
         ARCHIVE  DESTINATION ${EXPORT_LIB_DIR}
         RUNTIME  DESTINATION ${EXPORT_LIB_DIR}
         LIBRARY  DESTINATION ${EXPORT_LIB_DIR} 
       )